syntax = "proto3";
option go_package = "rpc-douyin/src/proto/auth";
package proto.auth;


message AuthGenRequest {
  int64 user_id = 1;
}
message AuthGenResponse {
  string token = 3;
}

message AuthRequest {
  string token = 1;
}

message AuthResponse {
  int64 user_id = 1;
}

service AuthService {
  rpc AuthGen(AuthGenRequest) returns (AuthGenResponse);
  rpc Authenticate(AuthRequest) returns (AuthResponse);
}